ZON-1976: Remove video stage padding

--- a/sass/web.site/modules/video/_video-stage.sass
+++ b/sass/web.site/modules/video/_video-stage.sass
@@ -1,7 +1,7 @@
 .video-stage
 	background-color: $color-video-background
 	color: $grey--light
-	margin: 0 (-$page-padding) remify($small--px) (-$page-padding)
+	margin: 0 (-$page-padding)
 	overflow: hidden
 	padding: 0 $page-padding
 	+respond-min($break-desktop-min)
