--- a/src/zeit/web/site/templates/inc/module/playlist.html
+++ b/src/zeit/web/site/templates/inc/module/playlist.html
@@ -1,4 +1,4 @@
-{% import "zeit.web.core:templates/macros/layout_macro.tpl" as lama %}
+{% import 'zeit.web.site:templates/macros/layout_macro.tpl' as lama %}
 
 {% if view.is_hp and view.context.advertising_enabled -%}
     {{ lama.adplace(view.banner(10), view) }}
