--- a/sass/web.site/modules/centerpage/_section-heading.sass
+++ b/sass/web.site/modules/centerpage/_section-heading.sass
@@ -27,7 +27,7 @@
 			content: "\203A" // › = single right-pointing angle quotation mark
 			font-size: remify(32px)
 			+respond-min($break-phablet-min)
-				content: "\25B8" // ▸ = Black Right-Pointing Small Triangle
+				// content: "\25B8" // ▸ = Black Right-Pointing Small Triangle
 				font-size: 1em
 	&__text
 		+respond-max($break-phablet-min)
