--- a/sass/web.site/modules/centerpage/_servicebox.sass
+++ b/sass/web.site/modules/centerpage/_servicebox.sass
@@ -2,17 +2,9 @@
 	display: none
 	+respond-min($break-tablet-min)
 		display: block
-	&__heading
-		font-size: remify(24px)
-		margin: remify(0 0 4px 0)
-	&__listing
-		overflow: hidden
 	&__column
-		+respond-min($break-tablet-min)
-			float: left
-			width: remify(180px)
-		+respond-min($break-desktop-min)
-			width: remify(234px)
+		float: left
+		width: 25%
 	&__link
 		display: block
 		font-size: remify(14px)
@@ -23,7 +15,6 @@
 			padding-left: remify(28.8px)
 		+link
 			color: $zon_grey
-			text-decoration: none
 		+on-interaction
 			color: $zon_grey
 			span
