--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -1,4 +1,5 @@
-{% import "zeit.web.core:templates/macros/layout_macro.tpl" as lama %}
+{% import 'zeit.web.site:templates/macros/layout_macro.tpl' as lama %}
+{% import 'zeit.web.site:templates/macros/centerpage_macro.tpl' as cp %}
 
 <div class="{{ 'cp-area' | with_mods(area.kind) }}">
     {% block before_module_list %}{% endblock %}
