--- a/src/zeit/web/site/templates/inc/area/newsticker.html
+++ b/src/zeit/web/site/templates/inc/area/newsticker.html
@@ -1,21 +1,16 @@
-<div class="{{ 'cp-area' | with_mods(area.kind) }}">
-    <div class="newsticker">
-        {% block before_module_list %}
-            <div class="section-heading" id="newsticker">
-                <h6 class="section-heading__title">{{ area.title }}</h6>
-                <a href="{{ view.request.route_url('home') }}news/index" class="section-heading__link">
-                    <span class="section-heading__text">Alle Fotostrecken</span>
-                </a>
-            </div>
-        {% endblock %}
-        {% for column in area.values() | map('get_module') | slice(2) -%}
-            <div class="newsticker__column newsticker__column--{{ loop.index }}">
-                {% for module in column %}
-                    {% set teaser = module | first_child %}
-                    {% include "zeit.web.site:templates/inc/teaser/zon-newsteaser.tpl".format(layout) %}
-                {% endfor %}
-            </div>
-        {% endfor %}
-        {% block after_module_list %}{% endblock %}
-    </div>
-</div>
+{% extends "zeit.web.site:templates/inc/area/default.html" %}
+
+{% block before_module_list %}
+    {{ cp.section_heading(area.title, view, 'news/index', 'Alle Schlagzeilen') }}
+{% endblock %}
+
+{% block module_list %}
+    {% for column in area.values() | map('get_module') | slice(2) -%}
+        <div class="newsticker__column">
+            {% for module in column %}
+                {% set teaser = module | first_child %}
+                {% include "zeit.web.site:templates/inc/teaser/zon-newsteaser.tpl" %}
+            {% endfor %}
+        </div>
+    {% endfor %}
+{% endblock %}
