--- a/src/zeit/web/site/templates/inc/module/servicebox.html
+++ b/src/zeit/web/site/templates/inc/module/servicebox.html
@@ -1,20 +1,19 @@
 {% import 'zeit.web.site:templates/macros/layout_macro.tpl' as lama %}
+{% import 'zeit.web.site:templates/macros/centerpage_macro.tpl' as cp %}
 
 <nav class="servicebox" id="servicebox">
-    <h3 class="servicebox__heading">Service</h3>
-    <div class="servicebox__listing">
-        {% for service_column in module.service_items %}
-        {% set column_loop = loop %}
-        <div class="servicebox__column">
-            {% for service in service_column %}
-            {% set row_loop = loop %}
-            {% set tracking_slug = 'servicebox.{}.{}..{}'.format(column_loop.index, row_loop.index, service.id) %}
-            <a class="servicebox__link" href="{{ service.href }}" data-id="{{ tracking_slug }}">
-                {{ lama.use_svg_icon('servicebox-{}'.format(service.id), 'servicebox__icon servicebox__icon--{}'.format(service.id), request) }}
-                <span>{{ service.title }}</span>
-            </a>
-            {% endfor %}
-        </div>
+    {{ cp.section_heading('Service') }}
+    {% for service_column in module.service_items %}
+    {% set column_loop = loop %}
+    <div class="servicebox__column">
+        {% for service in service_column %}
+        {% set row_loop = loop %}
+        {% set tracking_slug = 'servicebox.{}.{}..{}'.format(column_loop.index, row_loop.index, service.id) %}
+        <a class="servicebox__link" href="{{ service.href }}" data-id="{{ tracking_slug }}">
+            {{ lama.use_svg_icon('servicebox-{}'.format(service.id), 'servicebox__icon servicebox__icon--{}'.format(service.id), request) }}
+            <span>{{ service.title }}</span>
+        </a>
         {% endfor %}
     </div>
+    {% endfor %}
 </nav>
