ZON-1076: Reorder macro arguments

--- a/src/zeit/web/site/templates/inc/area/newsticker.html
+++ b/src/zeit/web/site/templates/inc/area/newsticker.html
@@ -1,7 +1,7 @@
 {% extends "zeit.web.site:templates/inc/area/default.html" %}
 
 {% block before_module_list %}
-    {{ cp.section_heading(area.title, view, 'news/index', 'Alle Schlagzeilen') }}
+    {{ cp.section_heading(area.title, 'Alle Schlagzeilen', 'news/index', view) }}
 {% endblock %}
 
 {% block module_list %}
