MAINT: Remove obsolete SASS imports

--- a/sass/web.magazin/base/_defaults.sass
+++ b/sass/web.magazin/base/_defaults.sass
@@ -2,10 +2,11 @@
     +box-sizing(border-box)
 
 body
+    background-color: $gainsboro
+    color: $color-text
     font-family: $article-body-font
     font-size: $font-m
     line-height: $base-line-height
-    color: $color-text
     margin: 0
     padding: 0
 
