Insert line breaks. Correct typo.

--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -29,7 +29,11 @@
             <span class="beta-teaser__title">Beta-Test von ZEIT&nbsp;ONLINE</span>
             <p class="beta-teaser__prose">
                 Wir entwickeln die neue Version von ZEIT&nbsp;ONLINE gemeinsam mit unseren
-                Nutzerinnen und Nutzern. Es gibt zwei Möglichkeiten, die neue Seite zu sehen. Ein Teil der Nutzer wird derzeit zufällig für den Beta-Test ausgewählt. Wenn Sie nicht ausgewählt wurden, also das bisherige Design sehen, koennen Sie dennoch beim Betatest mitmachen: Senden Sie bitte eine E-Mail mit Ihrem Nutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
+                Nutzerinnen und Nutzern. Es gibt zwei Möglichkeiten, die neue Seite zu sehen.
+                Ein Teil der Nutzer wird derzeit zufällig für den Beta-Test ausgewählt.
+                Wenn Sie nicht ausgewählt wurden, also das bisherige Design sehen,
+                koennen Sie dennoch beim Betatest mitmachen: Senden Sie bitte eine E-Mail
+                mit Ihrem Nutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
             <div class="beta-teaser__cta">
                 <a class="beta-teaser__button" href="mailto:beta@zeit.de">E&#x2011;Mail 
@@ -40,11 +44,15 @@
             <span class="beta-teaser__title">Werden Sie Beta-Tester von ZEIT&nbsp;ONLINE</span>
             <p class="beta-teaser__prose">
                 Wir entwickeln die neue Version von ZEIT&nbsp;ONLINE gemeinsam mit unseren
-                Nutzerinnen und Nutzern. Es gibt zwei Möglichkeiten, die neue Seite zu sehen. Ein Teil der Nutzer wird derzeit zufällig für den Beta-Test ausgewählt. Wenn Sie nicht ausgewählt wurden, also das bisherige Design sehen, koennen Sie dennoch beim Betatest mitmachen: Senden Sie bitte eine E-Mail mit Ihrem Nutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
+                Nutzerinnen und Nutzern. Es gibt zwei Möglichkeiten, die neue Seite zu sehen.
+                Ein Teil der Nutzer wird derzeit zufällig für den Beta-Test ausgewählt.
+                Wenn Sie nicht ausgewählt wurden, also das bisherige Design sehen, koennen Sie
+                dennoch beim Betatest mitmachen: Senden Sie bitte eine E-Mail mit
+                Ihrem Nutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
             <p class="beta-teaser__prose">
                 <b>Sie sind schon Beta-Tester?</b>
-                Melde Sie sich an.
+                Melden Sie sich an.
             </p>
             <div class="beta-teaser__cta">
                 <a class="beta-teaser__button" href="{{ request.registry.settings.community_host }}/user/login?destination={{ view.friedbert_host }}beta">Zur Anmeldung</a>
