--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -32,7 +32,7 @@
                 Nutzerinnen und Nutzern. Es gibt zwei Möglichkeiten, die neue Seite zu sehen.
                 Ein Teil der Nutzer wird derzeit zufällig für den Beta-Test ausgewählt.
                 Wenn Sie nicht ausgewählt wurden, also das bisherige Design sehen,
-                koennen Sie dennoch beim Betatest mitmachen: Senden Sie bitte eine E-Mail
+                können Sie dennoch beim Betatest mitmachen: Senden Sie bitte eine E-Mail
                 mit Ihrem Nutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
             <div class="beta-teaser__cta">
@@ -46,7 +46,7 @@
                 Wir entwickeln die neue Version von ZEIT&nbsp;ONLINE gemeinsam mit unseren
                 Nutzerinnen und Nutzern. Es gibt zwei Möglichkeiten, die neue Seite zu sehen.
                 Ein Teil der Nutzer wird derzeit zufällig für den Beta-Test ausgewählt.
-                Wenn Sie nicht ausgewählt wurden, also das bisherige Design sehen, koennen Sie
+                Wenn Sie nicht ausgewählt wurden, also das bisherige Design sehen, können Sie
                 dennoch beim Betatest mitmachen: Senden Sie bitte eine E-Mail mit
                 Ihrem Nutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
