Close closed beta and open closed beta

--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -40,7 +40,7 @@
                 senden</a>
             </div>
             {% else %}
-            <span class="beta-teaser__kicker">Closed Beta</span>
+            <span class="beta-teaser__kicker">Open Beta</span>
             <span class="beta-teaser__title">Werden Sie Beta-Tester von ZEIT&nbsp;ONLINE</span>
             <p class="beta-teaser__prose">
                 Wir entwickeln die neue Version von ZEIT&nbsp;ONLINE gemeinsam mit unseren
