ZON-1881: clicktracking for links inside article content

--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -27,7 +27,7 @@
 
 
 {% block article_pages %}
-    <div class="article-page">
+    <div class="article-page" data-page-number="{{ view.current_page.number+1 }}">
         {{ render_page(view.current_page) }}
     </div>
 {% endblock article_pages %}
