--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -12,6 +12,7 @@
 @import "constants"
 @import "mixins"
 
+@import "modules/breadcrumbs"
 @import "modules/breakpoints-to-js"
 @import "modules/defaults"
 @import "modules/basics"
