--- a/src/zeit/web/site/templates/inc/footer.html
+++ b/src/zeit/web/site/templates/inc/footer.html
@@ -5,7 +5,7 @@
         {{ foma.footer_logo(view.request) }}
     </div>
 </div>
-<div class="breadcrumbs">
+<div class="footer-breadcrumbs">
     {%- include "zeit.web.site:templates/inc/navigation/breadcrumbs.tpl" ignore missing -%}
 </div>
 <div class="footer-publisher">
