--- a/sass/web.site/modules/teaser/_teaser-printbox.sass
+++ b/sass/web.site/modules/teaser/_teaser-printbox.sass
@@ -6,7 +6,7 @@
 		font-size: $font-s
 		font-weight: bold
 		letter-spacing: $zon-letter-spacing-m
-		margin: 0 0 remify(16px) 0
+		margin: 0 0 remify(16px)
 		padding: remify(0 10px 10px 10px)
 		text-transform: uppercase
 
