--- a/sass/_functions.sass
+++ b/sass/_functions.sass
@@ -114,6 +114,9 @@ $rem-to-px-base: 16 !default
 		@else if ($unit == 'em') // conversion to rem
 			$list: append($list, $val * 1rem)
 
+		@else if ($unit == 'rem')
+			$list: append($list, $val)
+
 		@else if ($unit == '') // unitless values, like in 'margin: 0 16px'
 			$list: append($list, $value)
 
