--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -69,12 +69,12 @@
 	&__title
 		@extend %teaser-title
 		color: $white
-		font-size: $font-mxl--rem
+		font-size: em(22px)
 		line-height: 1.12
 		+respond-min($break-tablet-min)
-			font-size: remify(26px)
+			font-size: em(26px)
 		+respond-min($break-desktop-min)
-			font-size: $font-xxxl--rem
+			font-size: em(40px)
 			line-height: 1.28
 
 img.teaser-topic-main__media-item
