--- a/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
@@ -1,6 +1,6 @@
 .teaser-fullwidth-column
 	@extend %teaser-column
-	margin: remify(40px) (-$page-padding) $vertical-space (-$page-padding)
+	margin: 0 (-$page-padding)
 	&__media
 		@extend %teaser-column__media
 	&__media-item
@@ -9,7 +9,6 @@
 		@extend %teaser-series-label
 	&__heading
 		@extend %teaser-heading
-		margin-bottom: remify(4px)
 	&__combined-link
 		@extend %teaser-combined-link
 	&__kicker
@@ -19,7 +18,7 @@
 	&__text
 		@extend %teaser-text
 	&__byline
-		@extend %teaser-column__byline
+		@extend %teaser-byline
 	&__metadata
 		@extend %teaser-metadata
 	&__datetime
@@ -27,28 +26,40 @@
 	&__commentcount
 		@extend %teaser-commentcount
 
-.teaser-fullwidth-column--has-media
-	.teaser-fullwidth-column__byline
+	&--has-media &__metadata
 		@extend %teaser-column__media-space
 
 +respond-min($break-phablet-min)
 	.teaser-fullwidth-column
-		padding: remify(40px)
-		&__title
-			font-size: remify(32px)
-		&__text
-			font-size: remify(16px)
-		&__byline
-			margin-top: remify(8px)
-
-	.teaser-fullwidth-column--has-media
-		min-height: $teaser-column-image-height-fullwidth * 1.2
-		.teaser-fullwidth-column__media
+		&--has-media
+			min-height: $teaser-column-image-height-fullwidth * 1.2
+		&--has-media &__container
+			max-width: 66%
+		&--has-media &__media
 			width: $teaser-column-image-width-fullwidth
 			height: $teaser-column-image-height-fullwidth
-		.teaser-fullwidth-column__byline
+		&--has-media &__metadata
 			min-height: initial
-		.teaser-fullwidth-column__text,
-		.teaser-fullwidth-column__title
-			padding-right: remify($teaser-column-image-width-fullwidth * 1.2)
+			padding-right: 0
 
++respond-min($break-tablet-min)
+	.teaser-fullwidth-column
+		padding: em(32px)
+		&__container
+			max-width: 72%
+		&__media
+			right: 3%
+
++respond-min($break-desktop-min)
+	.teaser-fullwidth-column
+		padding-left: em(36px)
+		padding-right: em(36px)
+		&__title
+			font-size: em(34px)
+		&__text
+			font-size: em(18px)
+			margin-bottom: remify(8px)
+		&__byline,
+		&__metadata
+			font-size: em(14px)
+			letter-spacing: 0.04em
