--- a/src/zeit/web/site/templates/centerpage.html
+++ b/src/zeit/web/site/templates/centerpage.html
@@ -28,7 +28,7 @@
         {% set region_loop = loop %}
         {%- include ["zeit.web.site:templates/inc/region/{}.html".format(region.kind),
                      "zeit.web.site:templates/inc/region/default.html"] ignore missing -%}
-        {% if view.is_hp and (first_region_duo_found == false) and (region.kind == 'duo') and view.context.advertising_enabled %}
+        {% if (first_region_duo_found == false) and (region.kind == 'duo') and view.context.advertising_enabled %}
             {{ lama.adplace(view.banner(10), view) }}
             {% set first_region_duo_found = true %}
         {% endif %}
