--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -68,6 +68,10 @@
     <noscript>
         <link href="{{ request.asset_url('css/icons/site.fallback.css') }}" rel="stylesheet">
     </noscript>
+    {% if view.enable_third_party_modules %}
+        <!-- IVW -->
+        <script id="ivw-v2" type="text/javascript" src="https://script.ioam.de/iam.js"></script>
+    {% endif %}
     {% if view.enable_third_party_modules and view.enable_iqd %}
         {% include "zeit.web.core:templates/inc/ads/%s/head.html" % view.ad_delivery_type ignore missing %}
         {%- block content_ad_script -%}{%- endblock -%}
