--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -9,6 +9,8 @@ $break-phablet-min: em(520px)
 $break-tablet-min: em(768px)
 $break-desktop-min: em(980px)
 $break-areas: $break-tablet-min
+// exclusively used by .mobile-hidden 
+$break-mobile-max: em(767px)
 
 // letter-spacing (a half of a pixel)
 $zon-letter-spacing-l: 0.08em
