--- a/sass/web.site/modules/_basics.sass
+++ b/sass/web.site/modules/_basics.sass
@@ -11,3 +11,11 @@
 // override normalize.css
 input[type="search"]
 	+box-sizing(border-box)
+
+// visually hidden construct, which I properly didn't hated enough to prevent us from it
+// a region, area or teaser can be set to be not `visible_mobile`. If so, it's hidden on
+// mobile breakpoint. This must totally unbemmy overrule all other instructions
++respond-max($break-mobile-max)
+	#main
+		.mobile-hidden
+			display: none
