ZON-1945: Enable article interactions for galleries

--- a/src/zeit/web/site/templates/gallery.html
+++ b/src/zeit/web/site/templates/gallery.html
@@ -10,3 +10,7 @@
         </div>
     </div>
 {% endblock article_pages %}
+
+{% block article_interactions %}
+    {% include "zeit.web.site:templates/inc/article/interactions.tpl" %}
+{% endblock %}
