ZON-1994: ok, make it more failsafe, gnnpf…

--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -1,7 +1,7 @@
 {% import 'zeit.web.site:templates/macros/layout_macro.tpl' as lama %}
 {% import 'zeit.web.site:templates/macros/centerpage_macro.tpl' as cp %}
 
-<div class="{{ 'cp-area' | with_mods(area.kind) }}{% if not(area.visible_mobile) %} mobile-hidden{% endif %}">
+<div class="{{ 'cp-area' | with_mods(area.kind) }}{% if area.visible_mobile == False %} mobile-hidden{% endif %}">
     {% block before_module_list %}{% endblock %}
     {% block module_list %}
         {% for module in area.values() | map('get_module') -%}
