ZON-1945: Style article tags

--- a/sass/web.site/modules/article/_article-interactions.sass
+++ b/sass/web.site/modules/article/_article-interactions.sass
@@ -1,6 +1,6 @@
 .article-interactions
 	border-top: 2px solid $zon_lighter_grey
-	padding: remify(12px 0)
+	padding: remify(20px 0 10px)
 
 .sharing-menu
 	font-size: remify(14px)
