--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -91,6 +91,7 @@
 @import "modules/pagination"
 @import "modules/article/portraitbox"
 @import "modules/article/article-interactions"
+@import "modules/article/article-tags"
 @import "modules/article/nextread"
 
 // article - column
