--- a/sass/web.site/modules/_breadcrumbs.sass
+++ b/sass/web.site/modules/_breadcrumbs.sass
@@ -4,7 +4,7 @@
 		color: $zon_mid_grey
 		display: inline
 		font-size: remify(15px)
-		letter-spacing: remify(0.03em)
+		letter-spacing: $zon-letter-spacing-s
 		&:after
 			content: "›"
 			margin-left: remify(0.2em)
@@ -16,4 +16,5 @@
 		&:hover, &:link, &:visited
 			color: inherit
 	&__list
-		padding-left: 0
+		margin: 1em 0
+		padding: 0
