Use velocity.js for footer

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -209,9 +209,9 @@
 }
 
 @mixin drop_icon {
-	display: inline-block;
-	margin-left: $tiny;
 	content: "▾";
+	display: inline-block; // needed for working transformation
+	margin-left: $tiny;
 }
 
 /* mixins for navigation/header */
