Fix: Extra function for tracking

--- a/src/zeit/web/core/templates/inc/inline_js/library.html
+++ b/src/zeit/web/core/templates/inc/inline_js/library.html
@@ -53,6 +53,10 @@
                 } catch( e ) {
                     return 'desktop';
                 }
+            },
+            getTrackingBreakpoint: function() {
+                var point = this.get();
+                return point === 'desktop' ? 'stationaer' : point;
             }
         }
     };
