--- a/src/zeit/web/core/templates/inc/tracking/webtrekk.html
+++ b/src/zeit/web/core/templates/inc/tracking/webtrekk.html
@@ -57,7 +57,7 @@
             10: "{%- if view.context.advertising_enabled %}yes{% endif -%}", // Banner aktiv?
             11: "", // Fehler
             12: window.ZMO.isMobileView() ? "mobile.site" : "desktop.site",
-            13: window.ZMO.breakpoint.value === "desktop" ? "stationaer" : window.ZMO.breakpoint.value,
+            13: window.ZMO.breakpoint.getTrackingBreakpoint(),
             14: "neu"
         };
 
