ZON-1816: Update footer styles

--- a/sass/web.site/modules/_footer.sass
+++ b/sass/web.site/modules/_footer.sass
@@ -86,6 +86,8 @@ $footer_logo_width_small: em(280px)
 .footer-publisher
 	@extend %footer_dark
 	+respond-min($break-tablet-min)
+		background-color: $zon_lighter_grey
+		color: $zon_dark_grey
 		padding-bottom: $petite
 	&__row
 		&--extra
