ZON-1999: Bottom-align small column teaser image

--- a/sass/web.site/modules/teaser/_teaser-small-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-column.sass
@@ -37,9 +37,10 @@
 			min-height: initial
 			padding-right: 0
 		&__media
-			top: 0
-			right: 60%
 			bottom: 0
-			left: 0
-			width: 40%
 			height: 100%
+			left: 0
+			margin-top: auto
+			max-height: remify(250px)
+			top: 0
+			width: remify(250px)
