--- a/src/zeit/web/site/templates/inc/region/default.html
+++ b/src/zeit/web/site/templates/inc/region/default.html
@@ -1,6 +1,7 @@
 <div class="{{ 'cp-region' | with_mods(region.kind) }}{% if region.visible_mobile == False %} mobile-hidden{% endif %}">
     {%- block before_area_list %}{% endblock %}
     {%- for area in region.values() | map('get_area') %}
+        {%- set area_loop = loop %}
         {% include "zeit.web.site:templates/inc/area/includer.html" %}
     {%- endfor %}
     {%- block after_area_list %}{% endblock %}
