--- a/src/zeit/web/site/templates/inc/area/topic.html
+++ b/src/zeit/web/site/templates/inc/area/topic.html
@@ -1,21 +1,15 @@
-<div class="{{ 'cp-area' | with_mods(area.kind) }}">
-    {% block before_module_list %}{% endblock %}
-    {% block before_module_include scoped %}{% endblock %}
+{% extends "zeit.web.site:templates/inc/area/default.html" %}
+
+{% block module_list %}
     {% set module = area.values()[:1][0] %}
     {% set teaser = module | first_child %}
     {% set module_layout = 'teaser-topic-main' %}
     {% include "zeit.web.site:templates/inc/teaser_asset/imagegroup_zon-topic.tpl" %}
-    {% include
-        ["zeit.web.site:templates/inc/teaser/zon-topic-main.tpl",
-         "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
+    {% include "zeit.web.site:templates/inc/teaser/zon-topic-main.tpl" %}
     <div class="teaser-topic-list">
     {% for module in area.values()[0:3] -%}
         {% set teaser = module | first_child %}
-        {% include
-            ["zeit.web.site:templates/inc/teaser/zon-topic-list.tpl",
-             "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
-        {% block after_module_include scoped %}{% endblock %}
+        {% include "zeit.web.site:templates/inc/teaser/zon-topic-list.tpl" %}
     {% endfor %}
     </div>
-    {% block after_module_list %}{% endblock %}
-</div>
+{% endblock %}
